--- a/views/public/countries.ejs
+++ b/views/public/countries.ejs
@@ -15,7 +15,7 @@
 
                         <% for ( var ckey in continents[key].countries ) { if( continents[key].countries[ckey].name ) { %>
                             <% if( continents[key].countries[ckey].avatar && continents[key].countries[ckey].avatar != "Test" && continents[key].countries[ckey].status != "disabled") { %>
-                            <div class="col-md-4">
+                            <div class="col-md-4 mt-3">
                                 <a href="/trademark-registration-in-<%= continents[key].countries[ckey].name.replace(/\s/g, '_').toLowerCase() %>" >
                                     
                                         <img src="images/<%= continents[key].countries[ckey].avatar %>">
