--- a/views/partials/admin_side_nav.ejs
+++ b/views/partials/admin_side_nav.ejs
@@ -10,6 +10,7 @@
             <li class="list-group-item"><a href="/njs-admin/manage/country">Manage Countries</a></li>
             <li class="list-group-item"><a href="/njs-admin/manage/promo">Manage PromoCode</a></li>
             <li class="list-group-item"><a href="/njs-admin/manage/articles">Manage Articles</a></li>
+            <li class="list-group-item"><a href="/njs-admin/manage/activities">Manage Activity Logs</a></li>
             <li class="list-group-item"><a href="/njs-admin/manage/euactions">Manage EUIPO Action Codes</a></li>
             <li class="list-group-item"><a href="/njs-admin/manage/tasks">Manage Task</a></li>
             <li class="list-group-item"><a href="/njs-admin/manage/events">Manage Events</a></li>
