--- a/views/admin/trademark/view.ejs
+++ b/views/admin/trademark/view.ejs
@@ -110,27 +110,35 @@
           </tr>
           <tr>
             <th>Street:</th>
-            <td><%= trademark.street %></td>
+            <td><%= trademark.companyStreet %></td>
           </tr>
           <tr>
             <th>City:</th>
-            <td><%= trademark.city %></td>
+            <td><%= trademark.companyCity %></td>
           </tr>
           <tr>
             <th>State:</th>
-            <td><%= trademark.state %></td>
+            <td><%= trademark.companyState %></td>
           </tr>
           <tr>
             <th>Postal Code:</th>
             <td><%= trademark.companyZipCode %></td>
           </tr>
+          <tr>
+            <th>Country:</th>
+            <td><%= trademark.companyCountry %></td>
+          </tr>
         </table>
 
-        <h4 class="m-2">Representative Information</h4>
+        <h4 class="m-2">Applicant Information</h4>
         <table class="table table-striped table-hovered">
           <tr>
             <th>Name:</th>
             <td><%= trademark.fname %> <%= trademark.lname %></td>
+          </tr>
+          <tr>
+            <th>Position:</th>
+            <td><%= trademark.position %></td>
           </tr>
           <tr>
             <th>Phone:</th>
