--- a/views/public/tsdr.ejs
+++ b/views/public/tsdr.ejs
@@ -29,7 +29,7 @@
                     <div class="ar-cname ar-info-line">Publication Date: <span class="ar-value"><%= moment(trademark.publicationDateFormatted).format('MMM D, YYYY') %></span></div>
                 <% } %>
 
-                <% if( trademark.documents.length > 0 ) { %>
+                <% if( trademark.documents && trademark.documents.length > 0 ) { %>
                     <div class="ar-cname ar-info-line">Documents: </div>
                     <table class="table table-responsive">
                         <tr>
