--- a/email-templates/trademarkCertificateNotification.ejs
+++ b/email-templates/trademarkCertificateNotification.ejs
@@ -347,7 +347,7 @@
                               customerName = trademark.user.name
                             }
                           %>
-                            Dear <%= name %>,
+                            Dear <%= customerName %>,
 
                           </p></td> 
                         
