--- a/views/trademark-order/delivery.ejs
+++ b/views/trademark-order/delivery.ejs
@@ -34,7 +34,7 @@
                     <div class="row">
 
                       <!-- Download Certificate as JPG -->
-                      <div class="col-xl-4 col-lg-5 col-6">
+                      <!-- <div class="col-xl-4 col-lg-5 col-6">
                         <div class="dwld-fl-box dwld-fl-jpg">
                           <div class="fl-cta">
                             <a title="Download PDF" class="btn btn-blue" target="_blank" href="/pdf/png/<%= pngName %>_1.png"><em class="fal fa-file-pdf"></em>Download <span class="fl-type">PNG</span></a>
@@ -45,7 +45,8 @@
                             </span>
                           </div>
                         </div>
-                      </div> <!-- end of download certificate as jpg -->
+                      </div>  -->
+                      <!-- end of download certificate as jpg -->
 
                       <!-- Download Certificate as PDF -->
                       <div class="col-xl-4 col-lg-5 col-6">
@@ -59,7 +60,8 @@
                             </span>
                           </div>
                         </div>
-                      </div> <!-- end of download certificate as pdf -->
+                      </div> 
+                      <!-- end of download certificate as pdf -->
 
                     </div>
                   </div> <!-- end of download certificate files wrap -->
