--- a/views/order/confirmation.ejs
+++ b/views/order/confirmation.ejs
@@ -160,6 +160,7 @@
 						<input class="" type="hidden" name="company" value="<%= data.company %>">
 						<input class="" type="hidden" name="fname" value="<%= data.fname %>">
 						<input class="" type="hidden" name="lname" value="<%= data.lname %>">
+						<input class="" type="hidden" name="nationality" value="<%= data.nationality %>">
 						<input class="" type="hidden" name="phone" value="<%= data.phone %>">
 						<input class="" type="hidden" name="fax" value="<%= data.fax %>">
 						<input class="" type="hidden" name="position" value="<%= data.position %>">
