--- a/views/order/registrationLanding.ejs
+++ b/views/order/registrationLanding.ejs
@@ -449,7 +449,8 @@
 									<% } else if ( price['service_type']  == "Registration" ) { %>
 										Trademark<br>Registration Request
 									<% } else if ( price['service_type']  == "Certificate" ) { %>
-										Trademark<br>Certificate Request
+										Trademark<br>Certificate Request<br>
+										Any administrative and courier fee will be billed separately.
 									<% } %>
 								</td>
 								<td class="gray"> 
