--- a/views/order/checkout.ejs
+++ b/views/order/checkout.ejs
@@ -33,7 +33,7 @@
 				<tr>
 					<td><%= (i + 1) %></td>
 					<td><%= cartItems[i].country ? cartItems[i].country.name : '' %></td>
-					<td><%= cartItems[i].serviceType ? cartItems[i].serviceType : '' %></td>
+					<td><%= cartItems[i].serviceType ? helpers.formatTextMongoValue(cartItems[i].serviceType) : '' %></td>
 					<td><%= cartItems[i].word_mark ? cartItems[i].word_mark : '' %></td>
 					<td><%= formatter.format(cartItems[i].price) %> <i><%= cartItems[i].discountAmount ? '(-'+formatter.format(cartItems[i].discountAmount) + ')' : '' %></i></td>
 				</tr>
