--- a/views/order/registrationLanding.ejs
+++ b/views/order/registrationLanding.ejs
@@ -449,8 +449,7 @@
 									<% } else if ( price['service_type']  == "Registration" ) { %>
 										Trademark<br>Registration Request
 									<% } else if ( price['service_type']  == "Certificate" ) { %>
-										Trademark<br>Certificate Request<br>
-										Any administrative and courier fee will be billed separately.
+										Trademark<br>Certificate Request *
 									<% } %>
 								</td>
 								<td class="gray"> 
@@ -485,6 +484,7 @@
 				<p style="font-size:24px;color:#000;font-weight:600;padding-top:30px;"> Note:</p>
 				<p> Prices include all official and professional fees. Prices do not include legal defenses in case of oppositions or objections</p>
 				<p> Timeframe of the trademark registration process is only an estimate and it may vary considerably if any objections and/or oppositions are presented, or other events occur during the trademark registration process.</p>
+				<p> * Any administrative and courier fees will be billed separately.</p>
 
 				
 			</div>
