--- a/views/public/prices.ejs
+++ b/views/public/prices.ejs
@@ -79,7 +79,7 @@
                     <ol style="max-width:648px;line-height:24px">
                         <li>Upon filing of the Statement of Use indicated in the Notice of Allowance which is issued after the publication stage.  This is only applicable for US trademarks filed under Section 1b.</li>
                         <li>When oppositions and objections are raised by third parties and USPTO respectively.</li>
-                        <li>Any administrative and courier fee will be billed separately.</li>
+                        <li>Any administrative and courier fees will be billed separately.</li>
                     </ol>
                     
                 </div>
