--- a/views/admin/cartItems/index.ejs
+++ b/views/admin/cartItems/index.ejs
@@ -57,7 +57,8 @@
                 <td><%= formatter.format(item.price) %> <i><%= hasCode && item.discountAmount ? '(-'+formatter.format(item.discountAmount) + ')' : '' %></i></td>
                 <td><%= moment(item.created_at_formatted).format('MMM D, YYYY') %></td>
                 <td><%= helpers.formatTextMongoValue(item.status) %></td>
-                <td><a href="/njs-admin/manage/cart-items/edit/<%= item._id %>"><i class="fa fa-pen"></i></a></td>
+                <td><a href="/njs-admin/manage/cart-items/edit/<%= item._id %>"><i class="fa fa-pen"></i></a>
+                    <a href="/njs-admin/manage/cart-items/delete/<%= item._id %>"><i class="fa fa-trash"></i></a></td>
 
             </tr>
             <% }) %>
