--- a/views/partials/admin_side_nav.ejs
+++ b/views/partials/admin_side_nav.ejs
@@ -5,6 +5,7 @@
     <div class="card-body">
         <ul class="list-group list-group-flush">
             <li class="list-group-item"><a href="/njs-admin/manage/user">Manage Users</a></li>
+            <li class="list-group-item"><a href="/njs-admin/manage/attorneys">Manage Attorneys</a></li>
             <li class="list-group-item"><a href="/njs-admin/manage/trademark">Manage Trademarks</a></li>
             <li class="list-group-item"><a href="/njs-admin/manage/orders">Manage Orders</a></li>
             <li class="list-group-item"><a href="/njs-admin/manage/cart-items">Manage Cart Items</a></li>
