--- a/views/admin/attorneys/add.ejs
+++ b/views/admin/attorneys/add.ejs
@@ -13,6 +13,11 @@
             <hr>
 
             <div class="form-group">
+                <label>Representative ID</label>
+                <input type="text" class="form-control" value="" placeholder="" name="representativeId" required>
+            </div>
+
+            <div class="form-group">
                 <label>First Name</label>
                 
                 <input type="hidden" class="form-control" value="" placeholder="" name="name">
