--- a/views/admin/attorneys/edit.ejs
+++ b/views/admin/attorneys/edit.ejs
@@ -13,6 +13,11 @@
             <hr>
 
             <div class="form-group">
+                <label>Representative ID</label>
+                <input type="text" class="form-control" value="<%= list.representativeId %>" name="representativeId">
+            </div>
+
+            <div class="form-group">
                 <label>First Name</label>
                 
                 <input type="hidden" class="form-control" value="<%= list.name %>" name="name">
